   configured rrdtool and gd have been major source of installation woes).
   added options for different layouts (overlay or separate) and locations.
* added default rule to the map file that will catch any plugin with
   standards-compliant perfdata output.
* added a slew of unit tests for map rules.
* fixed typo for ntp,offset in labels.conf
* provide more feedback when javascript is disabled

1.4.3 2010-06-07

* new configuration options (see nagiosgraph.conf for details):
     stack
* added graph zooming.  zooming happens in-place (no separate window).
   drag to zoom.  right-click to revert the graph.
* added mouseovers that display time under the cursor.
* optionally specify heartbeat, step, and resolution per host/service.
* clean up insert.pl in preparation for additional processing modes and
   performance data sources.
* fix to javascript to display hosts and services when specified via CGI
   even if they do not appear in the host and service menus.
* fixed bug in handling of backslashes in service and database names.
* added support for rrdtool STACK.  stack can be specified using the 'stack'
   directive and/or using the 'lineformat' directive.  see nagiosgraph.conf
   for details and examples.

1.4.2 2010-03-16

* new configuration options (see nagiosgraph.conf for details):
     colormax (optional)
     colormin (optional)
     language (optional)
     showprocessingtime (optional)
     default_geometry (optional)
     cgilogfile (optional)
     authzmethod (optional)
* added access control.  there are two ways to define access controls.  the
   default is to use the access control built in to nagios.  this works for
   nagios 3 and perhaps for older nagios releases.  the other way is to use
   an access control file specific to nagiosgraph.
* added i18n.  this is a very basic, no-dependencies implementation.  the
   intent is to be completely self contained, add minimal overhead, and not